# daynotes

./: .gitignore  README.md  dev.ps1  eslint.config.js  package-lock.json  package.json  vite.config.ts
.superpowers/sdd/: task-4-report.md
docs/verification/: 2026-07-11-work-in-progress.md  2026-07-15-optimization-audit.md
scripts/: verification-helpers.test.ts  verify-app.mjs  verify-browser-errors.mjs  verify-browser-init.js  verify-bundle-size.mjs  verify-complete-ui.mjs  verify-evidence.mjs  verify-logged.ps1  verify-rust.ps1
src/: App.css  App.test.tsx  App.tsx  designTokens.test.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  email.rs  export_pdf.rs  export_zip.rs  lib.rs  window_lifecycle.rs
src/components/: CalendarPicker.test.tsx  CalendarPicker.tsx  DateHeader.test.tsx  DateHeader.tsx  Editor.test.tsx  Editor.tsx  ExportPreview.test.tsx  ExportPreview.tsx  LazyModalBoundary.test.tsx  LazyModalBoundary.tsx  LinkEditor.test.tsx  LinkEditor.tsx  NoteHistoryModal.test.tsx  NoteHistoryModal.tsx  SaveStatus.test.tsx  SaveStatus.tsx  SettingsModal.test.tsx  SettingsModal.tsx  ShareModal.test.tsx  ShareModal.tsx  TablePicker.test.tsx  TablePicker.tsx  Toast.tsx  TodoPanel.test.tsx  TodoPanel.tsx
src/hooks/: useNoteSession.test.tsx  useNoteSession.ts
src/lib/: emailValidation.test.ts  emailValidation.ts  exportDocument.test.ts  exportDocument.ts  latestRequest.test.ts  latestRequest.ts  linkUtils.ts  pdfPages.test.ts  pdfPages.ts  shareRange.test.ts  shareRange.ts  tauri.ts  (+1 more)
(+33 files in other folders)
