[package]
name = "daynotes"
version = "0.2.0"
description = "DayNotes - A daily note-taking desktop app"
authors = ["cherub0"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
image = "0.23"
lopdf = "0.26"
printpdf = { version = "0.3", features = ["embedded_images"] }
